--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,6 +17,17 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+RUN apk add --no-cache \
+    chromium \
+    nss \
+    freetype \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont
+
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+
 COPY package*.json ./
 COPY prisma ./prisma/
 
