refactor: major scraper and frontend overhaul

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,7 +35,6 @@ EMAIL_OAUTH_CLIENT_SECRET="your_email_client_secret"
 EMAIL_OAUTH_REFRESH_TOKEN="your_email_refresh_token"
 EMAIL_FROM="Mieszkaniownik <your-email@gmail.com>"
 
-
 # Discord Bot Configuration
 DISCORD_BOT_TOKEN="your_discord_bot_token"
 
@@ -47,3 +46,8 @@ GOOGLE_MAPS_API_KEY="your_google_maps_api_key"
 
 # Scraper Configuration
 USE_SCRAPER_THREADS="true"
+
+# Otodom Authentication
+OTODOM_EMAIL=""
+OTODOM_PASSWORD=""
+```
