--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,25 @@ jobs:
           --health-timeout=5s
           --health-retries=5
 
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     env:
       DATABASE_URL: postgresql://mieszkaniownik_user:mieszkaniownik_password@localhost:5432/mieszkaniownik
       DATABASE_URL_TEST: postgresql://mieszkaniownik_user:mieszkaniownik_password@localhost:5432/mieszkaniownik_test
+      REDIS_HOST: localhost
+      REDIS_PORT: 6379
+      JWT_SECRET: test-jwt-secret-for-ci
+      NODE_ENV: test
+      FRONTEND_URL: http://localhost:3000
+      EXPIRY_TIME_MS: 3600000
 
     defaults:
       run:
@@ -73,7 +89,7 @@ jobs:
         if: always()
 
       - name: Seed database
-        run: npm run seed
+        run: npx prisma db seed
         if: always()
 
       - name: Create test database
@@ -117,6 +133,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Check commit name
+        if: github.event_name == 'pull_request'
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
 
       - name: Run prettier
         run: npm run format:check
