--- a/backend/helm-chart-backend/templates/secret.yaml
+++ b/backend/helm-chart-backend/templates/secret.yaml
@@ -28,6 +28,9 @@ data:
   {{- if .Values.secrets.app.GOOGLE_CLIENT_SECRET }}
   GOOGLE_CLIENT_SECRET: {{ .Values.secrets.app.GOOGLE_CLIENT_SECRET | b64enc | quote }}
   {{- end }}
+  {{- if .Values.secrets.app.GOOGLE_CALLBACK_URL }}
+  GOOGLE_CALLBACK_URL: {{ .Values.secrets.app.GOOGLE_CALLBACK_URL | b64enc | quote }}
+  {{- end }}
   {{- if .Values.secrets.app.DISCORD_WEBHOOK_URL }}
   DISCORD_WEBHOOK_URL: {{ .Values.secrets.app.DISCORD_WEBHOOK_URL | b64enc | quote }}
   {{- end }}
