--- a/backend/helm-chart-backend/values-dev.yaml
+++ b/backend/helm-chart-backend/values-dev.yaml
@@ -62,8 +62,11 @@ secrets:
     JWT_SECRET: "dev-jwt-secret-key-change-in-prod"
     GOOGLE_CLIENT_ID: "your-dev-google-client-id"
     GOOGLE_CLIENT_SECRET: "your-dev-google-client-secret"
+    GOOGLE_CALLBACK_URL: "https://api-dev.mieszkaniownik.com/auth/google/callback"
 
 config:
+  frontend:
+    url: "https://dev.mieszkaniownik.com"
   database:
     maxConnections: 5
     ssl: false
